--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #03030C;
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
+
 }
 
 code {
