--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -1,10 +1,45 @@
 @import url("https://use.typekit.net/ucu5nmz.css");
 
 .navigation-bar{
-    height: max-content;
     background-color: #04040c;
     color: #ffffff !important;
     font-family: century-gothic, sans-serif;
     font-weight: 400;
     font-style: normal;
+    font-size: 1.5rem;
+    z-index: 99;
 }
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    margin-right: 10%;
+  }
+.home{
+    float: left;
+    margin-left: 2rem;
+}
+.work{
+    float: right;
+}
+  
+  li .navigation {
+    display: inline-block;
+    color: #ffffff;
+    text-align: center;
+    margin-inline-end: 2rem;
+    margin-block-start: 2rem;
+    mix-blend-mode: difference;
+  }
+  .about{
+      float: right !important;
+  }
+  .navigation:hover{
+      font-weight: 600;
+      cursor: pointer;
+
+  }
