--- a/src/styles/Socials.css
+++ b/src/styles/Socials.css
@@ -1,17 +1,10 @@
 @import url("https://use.typekit.net/ucu5nmz.css");
 
-.Home-Image{
+.social{
     height: max-content;
     background-color: #04040c;
     color: #ffffff !important;
     font-family: century-gothic, sans-serif;
     font-weight: 400;
     font-style: normal;
-}
-.landing-img{
-    margin-block-start: 0rem;
-    text-align: center;
-    align-self: center;
-    width: 60%;
-    height: auto;
 }
