--- a/src/styles/Welcome.css
+++ b/src/styles/Welcome.css
@@ -7,6 +7,7 @@
     font-family: century-gothic, sans-serif;
     font-weight: 400;
     font-style: normal;
+    cursor: none
 }
 .welcome-txt{
     color: #ffffff !important;
