--- a/src/styles/Socials.css
+++ b/src/styles/Socials.css
@@ -2,9 +2,77 @@
 
 .social{
     height: max-content;
-    background-color: #04040c;
     color: #ffffff !important;
     font-family: century-gothic, sans-serif;
     font-weight: 400;
     font-style: normal;
+
+}
+.btn-contain{
+right: 1%;
+top: 60%;
+margin-block-start: 2rem;
+margin-inline-end: 2rem;
+margin-inline-start: 2rem;
+position: fixed;
+}
+.icon-resume{
+    background-image: url('../assets/resume_btn.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 3.5rem;
+    width: 4rem;
+    margin-block-start: 1rem;
+    position: inherit;
+
+}
+.icon-resume:hover{
+    background: url('../assets/resume_btn_blue.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 3.5rem;
+    width: 4rem;
+    cursor: pointer;
+
+}
+.icon-social{
+    background-image: url('../assets/share_icon.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 3.5rem;
+    width: 4rem;
+    margin-block-start: 1rem;
+
+}
+.icon-social:hover{
+    background: url('../assets/share_icon_blue.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 3.5rem;
+    width: 4rem;
+    cursor: pointer;
+
+}
+.icon-contact{
+    background-image: url('../assets/contact_icon.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 3.5rem;
+    width: auto;
+    margin-block-start: 1rem;
+}
+.icon-contact:hover{
+    background: url('../assets/contact_icon_blue.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 3.5rem;
+    width: auto;
+    cursor: pointer;
+
 }
