updated the share buttons so that they have workable functionaloty, this may need to be re factored at a later point if there are any issues, but it should be fine for now, known issues is that the email icon needs to be replaced because the svg file is off axis, also the urls for the css background images need to be implemented because as of right now on :hover there is no UI change, these need to be created

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,12 +1,8 @@
 @import url("https://use.typekit.net/ucu5nmz.css");
+@import './Global.scss';
 
 .Home{
-    height: max-content;
-    background-color: #04040c;
-    color: #ffffff !important;
-    font-family: century-gothic, sans-serif;
-    font-weight: 400;
-    font-style: normal;
+  @extend %universal-component-layout;
 }
 .content{
  text-align: center
@@ -27,6 +23,7 @@
 
 /* Animation */
 .anim-typewriter{
+  cursor: none;
   animation: typewriter 4s steps(60) 1s 1 normal both,
              blinkTextCursor 500ms steps(60) infinite normal;
 }
