--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -1,11 +1,8 @@
 @import url("https://use.typekit.net/ucu5nmz.css");
+@import './Global.scss';
 
 .navigation-bar{
-    background-color: #04040c;
-    color: #ffffff !important;
-    font-family: century-gothic, sans-serif;
-    font-weight: 400;
-    font-style: normal;
+    @extend %universal-component-layout;
     font-size: 1.5rem;
     z-index: 99;
 }
@@ -26,7 +23,6 @@ ul {
 .work{
     float: right;
 }
-  
   li .navigation {
     display: inline-block;
     color: #ffffff;
