--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -1,6 +1,8 @@
 @import url("https://use.typekit.net/ucu5nmz.css");
 @import './Global.scss';
 
+$buttonWidth: 6rem;
+$buttonHeight: 4rem;
 .navigation-bar{
     @extend %universal-component-layout;
     font-size: 1.5rem;
@@ -43,9 +45,9 @@ ul {
       background-image: url("../assets/more_btn.svg");
       position: fixed;
       left: 10%;
-      bottom: 10%;
-      width: 4.5rem;
-      height: 9rem;
+      bottom: 6%;
+      width: $buttonHeight;
+      height: $buttonWidth;
       background-repeat: no-repeat;
       background-position: center;
   }
@@ -53,3 +55,32 @@ ul {
       background-image: url('../assets/more_btn_hover.svg');
       cursor: pointer;
   }
+  .back-button{
+    background-image: url("../assets/back_btn.svg");
+    position: fixed;
+    left: 11.5%;
+    bottom: 25%;
+    width: $buttonWidth;
+    height: $buttonHeight;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.back-button:hover{
+    background-image: url('../assets/back_btn_hover.svg');
+    cursor: pointer;
+}
+
+.next-button{
+    background-image: url("../assets/next_btn.svg");
+    position: fixed;
+    right: 11.5%;
+    bottom: 25%;
+    width: $buttonWidth;
+    height: $buttonHeight;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.next-button:hover{
+    background-image: url('../assets/next_btn_hover.svg');
+    cursor: pointer;
+}
