continued implementing first about page

--- a/src/styles/WorkOne.scss
+++ b/src/styles/WorkOne.scss
@@ -44,6 +44,7 @@ $solution-text-right: 50%;
     right: $text-right;
     top: $text-top;
     z-index: 99;
+    margin-right: 0.5rem;
 }
 .the-role-header{
     font-size: 1.125rem;
