--- a/src/styles/AboutTwo.scss
+++ b/src/styles/AboutTwo.scss
@@ -1,7 +1,7 @@
 @import url("https://use.typekit.net/ucu5nmz.css");
 @import './Global.scss';
 
-.About-one {
+.About-two {
     @extend %universal-component-layout;
 }
 
@@ -12,8 +12,9 @@ $text-right: 50%;
 $text-top: 20%;
 $text-botton: 60%;
 $solution-text-right: 50%;
+$text-lower-bottom: 2%;
 
-.aboutone-title {
+.abouttwo-title {
     color: #ffffff !important;
     text-decoration: underline;
     z-index: 1;
@@ -26,46 +27,43 @@ $solution-text-right: 50%;
     right: $text-right;
 }
 
-.background-parent {
+.background-parent-about-two {
     width: 100%;
     height: 100%;
     position: fixed;
-    bottom: 0%;
-    left: 25%;
+    bottom: 10%;
+    left: 44%;
     /* Negative half of height. */
-    margin-left: -18%;
+    margin-left: -20%;
 }
 
-.west-coast-background {
-    background: url('../assets/about-background.svg');
+.waterloo-background {
+    background: url('../assets/waterloo-background.svg');
     background-size: contain;
     background-repeat: no-repeat;
     text-align: center;
     align-self: center;
-    height: 100%;
-    width: auto;
+    height: 40rem;
+    width: 60%;
     bottom: 0%;
     z-index: 1;
-    
 }
 
-.vertical-text {
-    font-size: 1.125rem;
+
+.the-description-text-education-one {
+    font-size: 1rem;
     color: rgb(255, 255, 255);
-    text-transform: uppercase;
     line-height: 1.2;
     text-align: right;
     position: fixed;
-    width: $text-area-width;
-    right: $text-right - 30;
-    top: $text-top - 10;
-    z-index: 99;
-    padding-bottom: 2%;
-    writing-mode: vertical-rl;
-    text-orientation: upright;
+    width: $text-area-width+20;
+    right: $text-right - 25;
+    bottom: $text-lower-bottom;
+    z-index: 50;
+    background-color: #03030C;
 }
 
-.the-name-header {
+.the-about-systems-header{
     font-size: 1.125rem;
     line-height: 1.2;
     color: rgb(255, 255, 255);
@@ -75,32 +73,27 @@ $solution-text-right: 50%;
     font-style: normal;
     position: fixed;
     display: inline-block;
-    top: 6rem;
-    right: $text-right - 3.5;
-
-
-}
-
-.the-description-text-about-one {
-    font-size: 1rem;
-    color: rgb(255, 255, 255);
-    line-height: 1.2;
-    text-align: right;
-    position: fixed;
-    width: $text-area-width+20;
+    bottom: $text-lower-bottom+20;
     right: $text-right - 25;
-    bottom: 2%;
-    z-index: 99;
-}
+    z-index: 40;
+    background-color: #03030C;
+    padding-left: 20%;
 
-.the-description-text-about-one-higher {
-    font-size: 1rem;
-    color: rgb(255, 255, 255);
+    
+}
+.waterloo-grad-year{
+    font-size: 2rem;
     line-height: 1.2;
-    text-align: right;
+    color: rgb(255, 255, 255);
+    text-transform: uppercase;
+    z-index: 1;
+    font-weight: 400;
+    font-style: normal;
+    width: 8rem;
     position: fixed;
-    width: $text-area-width - 6;
-    right: $text-right + 18;
-    top: $text-top;
-    z-index: 99;
+    display: inline-block;
+    bottom: $text-lower-bottom+50;
+    right: $text-right - 20;
+    z-index: 60;
+
 }
