--- a/src/styles/HomeImage.css
+++ b/src/styles/HomeImage.css
@@ -8,6 +8,16 @@
     font-weight: 400;
     font-style: normal;
 }
+.Home-Image-load{
+    height: max-content;
+    background-color: #04040c;
+    color: #ffffff !important;
+    font-family: century-gothic, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    align-content: center;
+    margin-top: 10rem;
+}
 .landing-img{
     margin-block-start: 0rem;
     text-align: center;
