--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -84,3 +84,10 @@ ul {
     background-image: url('../assets/next_btn_hover.svg');
     cursor: pointer;
 }
+.screen-number{
+    position: fixed;
+    bottom: 5%;
+    right: 10%;
+    font-size: 0.5rem;
+    cursor: none;
+}
