--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -36,5 +36,9 @@
   to{border-right-color: transparent;}
 }
 .hidden-base-64{
-  
+  transform: rotate(-90deg);
+  position: fixed;
+  left: 16%;
+  top: 26%;
+  font-size: 0.8rem;
 }
