--- a/src/styles/WorkTwo.scss
+++ b/src/styles/WorkTwo.scss
@@ -95,6 +95,7 @@ $solution-text-right: 50%;
     height: 50rem;
     width: auto;
     bottom: 0%;
+    opacity: 0;
     
 }
 .gov-job-details-button{
