continued to implement privacy policy

--- a/src/styles/Policy.scss
+++ b/src/styles/Policy.scss
@@ -3,3 +3,16 @@
     width: 60%;
     margin-left: 20%;
 }
+.h-2-title{
+    color: #ffffff;
+}
+.h-3-title{
+    color: #ffffff;
+}
+.h-4-title{
+    color: #ffffff;
+}
+.ul-title{
+    color: #ffffff;
+    position: inherit;
+}
