fixed cursor bug that was introducted with Redirect npm librarby

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -19,6 +19,7 @@
     font-family: century-gothic, sans-serif;
     font-weight: 400;
     font-style: normal;
+    cursor: default;
 }
 
 /* Animation */
@@ -41,6 +42,7 @@
   left: 16%;
   top: 26%;
   font-size: 0.8rem;
+  cursor: vertical-text;
 }
 .Policy-Redirect{
   position: fixed;
