--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -42,3 +42,28 @@
 p{
   color: #ffffff;
 }
+.click-target{
+  width: 100%;
+  height: max-content;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+/* This is specific mobile*/
+@media only screen and (max-width: 500px) {
+  p {
+    font-size: 0.75rem;
+  }
+}
+@media only screen and (max-width: 321px) {
+  p {
+    font-size: 0.5rem;
+  }
+}
+/* THIS IS SPECIFIC FOR SMALL SMALL ASPECT RATIO PHONES SUCH AS IPHONE 5/SE */
+@media only screen and (max-width: 569px) and (max-height: 321px){
+  p {
+    font-size: 0.5rem;
+  }
+}
