--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -58,3 +58,42 @@
   color: #450092;
 }
 /*CSSTransition */
+@media only screen and (max-width: 1100px) {
+  .hidden-base-64{
+    left: 10%;
+  }
+}
+@media only screen and (max-width: 376px) {
+  .hidden-base-64{
+    display: none;
+  }
+}
+/*THIS IS SPECIFIC FOR IPHONE X IN LANDSCAPE MODE */
+@media only screen and (max-width: 813px) and (max-height: 376px){
+  .hidden-base-64{
+    top: 32%;
+  }
+}
+/*THIS IS SPECIFIC FOR IPHONE X IN LANDSCAPE MODE */
+@media only screen and (max-width: 737px) and (max-height: 415px){
+  .hidden-base-64{
+    top: 40%;
+    left: 0;
+  }
+}
+/*THIS IS SPECIFIC FOR THE DECREASED TEXT SIZE LESS THAN 500PX*/
+@media only screen and (max-width: 500px) {
+  @keyframes typewriter{
+    from{width: 0;}
+    to{width: 22rem;}
+}
+}
+@media only screen and (max-width: 321px) {
+  @keyframes typewriter{
+    from{width: 0;}
+    to{width: 15rem;}
+}
+.Policy-Redirect a{
+  right: 30%;
+}
+}
