--- a/src/styles/HomeImage.css
+++ b/src/styles/HomeImage.css
@@ -1,6 +1,6 @@
 @import url("https://use.typekit.net/ucu5nmz.css");
 
-.Home-Image{
+.Home-Image {
     height: max-content;
     background-color: #04040c;
     color: #ffffff !important;
@@ -9,7 +9,8 @@
     font-style: normal;
     cursor: default;
 }
-.Home-Image-load{
+
+.Home-Image-load {
     height: max-content;
     background-color: #04040c;
     color: #ffffff !important;
@@ -20,15 +21,59 @@
     margin-top: 10rem;
     cursor: default;
 }
-.landing-img{
+
+.landing-img {
+    background-image: url(../assets/landing_page.svg);
+    position: fixed;
+    left: 50%;
+    transform: translateX(-25%);
     margin-block-start: 0rem;
     text-align: center;
     align-self: center;
-    width: 60%;
-    height: auto;
+    width: 100%;
+    height: 30rem;
     cursor: default;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
-.generating-text{
+
+.generating-text {
     cursor: none;
     text-decoration: underline;
+}
+/* THIS IS SPECIFIC FOR THE IPAD PRO */
+@media only screen and (max-width: 1080px) {
+    .landing-img {
+        background-image: url(../assets/landing_page_responsive_iPadProV2.svg);
+        height: 80%;
+        transform: translateX(-35%)
+    }
+}
+/* THIS IS SPECIFIC FOR THE TRADITIONAL IPAD */
+@media screen and (max-width: 1025px) and (max-height:769px) {
+    .landing-img{
+        transform: translateX(-20%)
+    }
+  }
+  @media only screen and (max-width: 415px) {
+    .landing-img {
+        background-image: url(../assets/landing_page_responsive_iPadProV2.svg);
+        height: 80%;
+        transform: translateX(-48%)
+    }
+}
+/* THIS IS SPECIFIC FOR THE IPHONE X */
+@media only screen and (max-width: 376px) {
+    .landing-img {
+        background-image: url(../assets/landing_page_responsive_iPadProV2.svg);
+        height: 80%;
+        transform: translateX(-50%)
+    }
+}
+@media only screen and (max-width: 321px) {
+    .landing-img {
+        background-image: url(../assets/landing_page_responsive_iPadProV2.svg);
+        height: 65%;
+        transform: translateX(-44%)
+    }
 }
