--- a/src/styles/HomeImage.css
+++ b/src/styles/HomeImage.css
@@ -35,6 +35,7 @@
     cursor: default;
     background-repeat: no-repeat;
     background-size: contain;
+    z-index: 1;
 }
 
 .generating-text {
@@ -49,10 +50,25 @@
         transform: translateX(-35%)
     }
 }
+@media screen and (max-width: 1200px){
+    .landing-img{
+        transform: translateX(-33%)
+    }
+  }
+@media screen and (max-width: 1080px){
+    .landing-img{
+        transform: translateX(-20%)
+    }
+  }
 /* THIS IS SPECIFIC FOR THE TRADITIONAL IPAD */
 @media screen and (max-width: 1025px) and (max-height:769px) {
     .landing-img{
         transform: translateX(-20%)
+    }
+  }
+  @media screen and (max-width: 525px){
+    .landing-img{
+        transform: translateX(-35%)
     }
   }
   @media only screen and (max-width: 415px) {
@@ -77,3 +93,31 @@
         transform: translateX(-44%)
     }
 }
+@media screen and (max-width:366px) and (max-height:630px) {
+    .landing-img{
+        transform: translateX(-40%);
+        height: 60%;
+    }
+  }
+  @media screen and (max-width:325px) and (max-height:460px) {
+    .landing-img{
+        transform: translateX(-25%);
+        height: 60%;
+    }
+  }
+  @media screen and (max-width:570px) and (max-height:325px) {
+    .landing-img{
+        z-index: -9;
+        background-image: url(../assets/landing_page.svg);
+        transform: translateX(-45%);
+        height: 60%;
+        bottom: 10%;
+        width: 50%;
+    }
+  }
+  @media screen and (max-width:426px) and (max-height:664px) {
+    .landing-img{
+        transform: translateX(-40%);
+        height: 75%;
+    }
+  }
