--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -3,12 +3,16 @@
 
 $buttonWidth: 6rem;
 $buttonHeight: 4rem;
+
 .navigation-bar {
     @extend %universal-component-layout;
     font-size: 1.5rem;
     z-index: 99;
+    color: #ffffff;
 }
-
+div{
+    color: #ffffff !important;
+}
 ul {
     list-style-type: none;
     margin: 0;
@@ -18,6 +22,10 @@ ul {
     top: 0;
     width: 100%;
     margin-right: 10%;
+    color: #ffffff !important;
+    font-family: century-gothic, sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .home {
@@ -31,11 +39,15 @@ ul {
 
 li .navigation {
     display: inline-block;
-    color: #ffffff;
+    color: #ffffff !important;
     text-align: center;
     margin-inline-end: 2rem;
     margin-block-start: 2rem;
     mix-blend-mode: difference;
+}
+
+li {
+    color: #ffffff !important;
 }
 
 .about {
@@ -49,13 +61,19 @@ li .navigation {
 }
 
 @media only screen and (max-width: 376px) {
- li .navigation{
-    margin-inline-end: 1rem;
-    margin-block-start: 2rem;
+    li .navigation {
+        margin-inline-end: 1rem;
+        margin-block-start: 2rem;
+    }
 }
+
+.navigation {
+    color: #ffffff;
+    text-decoration-color: #ffffff;
 }
 
 .more-button {
+    z-index: 98;
     background-image: url("../assets/more_btn.svg");
     position: fixed;
     left: 10%;
@@ -138,32 +156,47 @@ li .navigation {
     right: 10%;
     margin-right: -25%;
 }
-@media only screen and (max-width:321px) {
-    li .navigation{
-       margin-inline-end: 0.5rem;
-       margin-inline-start: 0rem;
-       margin-block-start: 2rem;
-   }
-   .home{
-       margin-left: 1rem;
-   }
-   .navigation-bar{
-       font-size: 1rem;
-   }
-   .about{
-       margin-right: 1rem;
-   }
-   .work{
-       margin-right: 0.5rem;
-   }
-   .screen-number{
-       display: none;
-   }
 
-   }
-   @media only screen and (max-width: 569px) and (max-height: 321px){
-    .navigation-bar{
+@media only screen and (max-width:400px) {
+    li .navigation {
+        margin-inline-end: 0.5rem;
+        margin-inline-start: 0rem;
+        margin-block-start: 2rem;
+    }
+
+    .home {
+        margin-left: 1rem;
+    }
+
+    .navigation-bar {
         font-size: 1rem;
     }
-  }
-  /* KNOWN ISSUE IS THAT SOCAILS BUTTONS DO NOT WORK FOR IPHONE SE/5 IN LANDSCAPE MODE BECAUSE OF SCREEN HEIGHT*/
+
+    .about {
+        margin-right: 1rem;
+    }
+
+    .work {
+        margin-right: 0.5rem;
+    }
+
+    .screen-number {
+        display: none;
+    }
+
+}
+
+@media only screen and (max-width: 569px) and (max-height: 321px) {
+    .navigation-bar {
+        font-size: 1rem;
+    }
+    .screen-number{
+        display: none;
+    }
+}
+@media only screen and (max-height: 750px){
+    .screen-number{
+        display: none;
+    }
+}
+/* KNOWN ISSUE IS THAT SOCAILS BUTTONS DO NOT WORK FOR IPHONE SE/5 IN LANDSCAPE MODE BECAUSE OF SCREEN HEIGHT*/
