--- a/src/styles/Socials.scss
+++ b/src/styles/Socials.scss
@@ -3,9 +3,11 @@
 
 .social {
     @extend %universal-component-layout;
+  
 }
 
 .btn-contain {
+    z-index: 99;
     right: 1%;
     bottom: 5%;
     margin-inline-end: 1%;
@@ -126,3 +128,8 @@
     background-image: url('../assets/share_btn_linkedin_hover.svg');
     @extend %button-shared-hover;
 }
+@media screen and (max-width:570px) and (max-height:325px) {
+.btn-contain{
+    transform: scale(0.6);
+}
+  }
