--- a/src/styles/HomeImage.css
+++ b/src/styles/HomeImage.css
@@ -121,3 +121,9 @@
         height: 75%;
     }
   }
+  @media screen and (max-width:320px) and (max-height:580px) {
+    .landing-img{
+        transform: translateX(-45%);
+        height: 70%;
+    }
+  }
