--- a/src/styles/Feature.scss
+++ b/src/styles/Feature.scss
@@ -143,7 +143,7 @@ $solution-text-right: 50%;
     /* Negative half of height. */
     margin-left: -25%;
 }
-
+/*DO NOT TOUCH!!!!! UNLESS MAKING CSS RESPONSIVE */
 .lulu-logo {
     position: absolute;
     height: auto;
@@ -166,4 +166,38 @@ $solution-text-right: 50%;
     width: 12rem;
     right: 0rem;
     top: 20%;
+}
+@media only screen and (max-width: 1350px){
+    .go-to-website-button a{
+        right: 32%;
+        margin-left: 10%;
+    }
+    .the-problem-text{
+        width: 20rem;
+    }
+    .the-solution-text{
+        width: 20rem;
+        z-index: 0;
+    }
+}
+@media only screen and (max-width: 1350px) and (max-height: 850px){
+    .the-solution-text{
+        top: 52%;
+    }
+    .the-solution-header{
+        top: 52% - 2;
+    }
+}
+@media only screen and (max-width: 1025px) and (max-height: 1370px){
+    .the-solution-text{
+        right: 40%;
+    }
+    .go-to-website-button a{
+        right: 40%;
+        top: 50%;
+    }
+    .combined-web-img{
+        margin-top: 20%;
+        right: 10%;
+    }
 }
