--- a/src/styles/HomeImage.css
+++ b/src/styles/HomeImage.css
@@ -43,11 +43,11 @@
     text-decoration: underline;
 }
 /* THIS IS SPECIFIC FOR THE IPAD PRO */
-@media only screen and (max-width: 1080px) {
+@media only screen and (max-width: 1080px) and (max-height: 1370px) {
     .landing-img {
         background-image: url(../assets/landing_page_responsive_iPadProV2.svg);
-        height: 80%;
-        transform: translateX(-35%)
+        height: 70%;
+        transform: translateX(-40%)
     }
 }
 @media screen and (max-width: 1200px){
