--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -68,3 +68,9 @@ p{
     font-size: 0.5rem;
   }
 }
+/*THIS IS A SPECIFIC ASPECT RATIO FOR THE IPHONE X BECAUSE IT HAS THE EXTENED SCREEN*/
+@media only screen and (max-width: 850px) and (max-height: 575px){
+  p {
+    font-size: 0.5rem;
+  }
+}
