--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -199,4 +199,9 @@ li {
         display: none;
     }
 }
+@media only screen and (max-width: 850px) and (max-height: 450px){
+    .back-button{
+        bottom: 30%;
+    }
+}
 /* KNOWN ISSUE IS THAT SOCAILS BUTTONS DO NOT WORK FOR IPHONE SE/5 IN LANDSCAPE MODE BECAUSE OF SCREEN HEIGHT*/
