--- a/src/styles/Feature.scss
+++ b/src/styles/Feature.scss
@@ -308,7 +308,7 @@ $solution-text-right: 50%;
         margin-top: 9rem;
     }
 }
-
+/*IPHONE 8+*/
 @media only screen and (max-width: 850px) and (max-height: 575px) {
     .feature-title {
         font-size: 1.5rem;
@@ -336,7 +336,7 @@ $solution-text-right: 50%;
         right: 36.5%;
     }
 }
-
+/*IPHONE 6,7,8*/
 @media only screen and (max-width: 420px) and (max-height: 800px) {
     .feature-title {
         top: 4rem;
@@ -364,11 +364,47 @@ $solution-text-right: 50%;
         right: 36.5%;
     }
 }
-
-@media only screen and (max-width: 376px) and (max-height: 668px) {
+/*IPHONE 6,7,8*/
+@media only screen and (max-width: 376px) and (max-height: 668px) and(min-width: 330px) {
     .go-to-website-button a {
         transform: scale(0.7);
         top: 70%;
         right: 36.5%;
+    }
+}
+/*IPHONE 5, SE*/
+@media only screen and (max-width: 330px) and (max-height: 570px) {
+    .the-problem-header{
+        top: 6.25rem;
+    }
+    .the-problem-text{
+        width: 10rem;
+        top: 7rem;
+    }
+    .the-solution-header{
+        top: 14.25rem;
+    }
+    .the-solution-text{
+        top: 15rem;
+        width: 10rem;
+    }
+    .combined-web-img{
+        width: 6rem;
+        margin-top: 6.25rem;
+    }
+    .go-to-website-button a {
+        transform: scale(0.6);
+        top: 85%;
+        right: 20%;
+    }
+}
+@media only screen and (max-width: 570px) and (max-height: 500px) and (min-height: 200px) {
+    .go-to-website-button a {
+        transform: scale(0.6);
+        top: 80%;
+        right: 30%;
+    }
+    .emily-twitter-photo{
+        display: none;
     }
 }
