--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -215,5 +215,15 @@ li {
         bottom: 11rem;
     }
 }
-
+/*IPHONE 5, SE */
+@media only screen and (max-width: 325px) and (max-height: 570px) {
+    .back-button {
+        bottom: 8rem;
+    }
+}
+@media only screen and (max-width: 570px) and (max-height: 330px) and (min-height: 200px) {
+    .back-button{
+        bottom: 8rem;
+    }
+}
 /* KNOWN ISSUE IS THAT SOCAILS BUTTONS DO NOT WORK FOR IPHONE SE/5 IN LANDSCAPE MODE BECAUSE OF SCREEN HEIGHT*/
